# InterviewAgent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  interview  package.json  promotion_speech_three_pillars.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260704_0001_initial_schema.py  20260708_0002_accounts_billing.py  20260710_0003_user_isolation_usage_idempotency.py  20260720_0004_civil_service_questions.py  20260720_0005_civil_service_question_users.py  20260720_0006_practice_question_category.py  20260720_0007_jobs_eval_agentops.py  20260720_0008_security_rbac_tokens.py
backend/examples/: interview_config.json
backend/src/interview_agent/: __init__.py
backend/src/interview_agent/core/: __init__.py  agent_loop.py  config.py  guardrails.py  harness.py  harness_result.py  industry.py  state.py
backend/src/interview_agent/domain/: __init__.py  billing.py  civil_service.py  resume.py
backend/src/interview_agent/embeddings/: __init__.py  embedding.py  embedding_service.py
backend/src/interview_agent/infrastructure/: __init__.py  auth_providers.py  codex_config.py  (+10 more)
backend/tests/: test_agent_loop.py  test_api.py  test_codex_config.py  test_conversation_store.py  test_doctor.py  test_embedding_service.py  test_guardrails.py  test_knowledge_base.py  test_model_runtime.py  test_production_storage.py  test_rag_eval.py  test_rag_index.py  test_resume_parser.py  test_resume_store.py  test_settings.py  test_terminal.py  test_web_search.py
backend/tests/fixtures/: rag_eval_cases.json
(+226 files in other folders)
